# ferrum-doom

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
.cursor/: environment.json
.cursor/scripts/: setup_cloud_env.sh
docs/: ARCHITECTURE.md  VALIDATION.md
engine/: Cargo.toml
engine/engine_core/: Cargo.toml  build.rs
engine/engine_core/c_src/doomgeneric/: doomgeneric.h  i_input.c  i_swap.h  i_websound.c
engine/engine_core/src/: lib.rs
engine/engine_music/: Cargo.toml
engine/engine_music/src/: lib.rs
engine/engine_platform/: Cargo.toml
engine/engine_platform/src/: lib.rs
engine/engine_render/: Cargo.toml
engine/engine_render/src/: lib.rs
engine/engine_sound/: Cargo.toml
engine/engine_sound/src/: lib.rs
engine/engine_wad/: Cargo.toml
engine/engine_wad/src/: lib.rs
engine/engine_wasm/: Cargo.toml
engine/engine_wasm/src/: lib.rs
engine/r4d/gameplay/: Cargo.toml
engine/r4d/gameplay/src/: lib.rs  player.rs  player_sprite.rs  thinker.rs  utilities.rs
engine/r4d/gameplay/src/env/: ceiling.rs  doors.rs  floor.rs  lights.rs  platforms.rs  specials.rs  switch.rs
engine/r4d/gameplay/src/level/: map_data.rs  map_defs.rs  mod.rs  pvs.rs
engine/r4d/gameplay/src/level/tests/: map_data_tests.rs  pvs_tests.rs
engine/r4d/gameplay/src/pic/: mod.rs
engine/r4d/gameplay/src/thing/: enemy.rs  interact.rs  mod.rs  movement.rs  shooting.rs
engine/r4d/render/render-trait/: Cargo.toml
engine/r4d/render/software25d/: Cargo.toml
engine/r4d/render/software25d/src/: bsp.rs  lib.rs  segs.rs  things.rs  utilities.rs
engine/r4d/sound/nosnd/: Cargo.toml
engine/r4d/sound/traits/: Cargo.toml
engine/r4d/wad/src/: extended.rs  iterators.rs  wad.rs
platform_web/: index.html  package.json
platform_web/src/: main.ts
scripts/: build_wasm.sh
