[workspace]
members = [
    "engine_core",
    "engine_wad",
    "engine_render",
    "engine_sound",
    "engine_music",
    "engine_platform",
    "engine_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-2.0-only"
version = "0.1.0"
authors = ["web-doom contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
bitflags = "2.6.0"
crc32fast = "1.5.0"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
