[package]
name = "engine_wasm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
crc32fast.workspace = true
engine_core = { path = "../engine_core" }
engine_music = { path = "../engine_music" }
engine_platform = { path = "../engine_platform" }
engine_render = { path = "../engine_render" }
engine_sound = { path = "../engine_sound" }
engine_wad = { path = "../engine_wad" }
serde_json.workspace = true
