[package]
name = "gameplay"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
null_check = []
safety_check = []
hprof = []

[dependencies]
math.workspace = true
sound-traits.workspace = true
sound-nosnd.workspace = true
wad.workspace = true
glam.workspace = true
log.workspace = true
coarse-prof.workspace = true
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.3"
